--- a/YC4_THUC_TAP_SINH_BE/YC4_THUC_TAP_SINH_BE.csproj
+++ b/YC4_THUC_TAP_SINH_BE/YC4_THUC_TAP_SINH_BE.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
   <ItemGroup>
