--- a/YC4_THUC_TAP_SINH_BE/appsettings.json
+++ b/YC4_THUC_TAP_SINH_BE/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-H8HV1PN;Database=YC4_THUC_TAP_API;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
