--- a/YC4_THUC_TAP_SINH_BE/appsettings.json
+++ b/YC4_THUC_TAP_SINH_BE/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-H8HV1PN;Database=YC4_THUC_TAP_API;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+  "JwtSettings": {
+    "SecretKey": "0T5jaRlHKNP47XG5Q4rKLFB1i+slefR8Vfu6s6Hu4mI=",
+    "Issuer": "YC4_JWT",
+    "Audience": "APP-YC4",
+    "ExpiryMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
