--- a/YC4_THUC_TAP_SINH_BE/YC4_THUC_TAP_SINH_BE.csproj
+++ b/YC4_THUC_TAP_SINH_BE/YC4_THUC_TAP_SINH_BE.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <appSettings>
+	<add key="EPPlus:ExcelPackage.License" value="NonCommercialPersonal:Nguyễn Đình Nam" />
+  </appSettings>
+	
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -8,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="EPPlus" Version="8.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
