--- a/YC4_THUC_TAP_SINH_BE/appsettings.json
+++ b/YC4_THUC_TAP_SINH_BE/appsettings.json
@@ -8,6 +8,11 @@
     "Audience": "APP-YC4",
     "ExpiryMinutes": 60
   },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercialPersonal:Nguyễn Đình Nam"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
